--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-    <meta name="viewport" content="width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vg.</title>
     <link rel="stylesheet" href="index.css">
 </head>
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="login.html" class="logout-btn">Logout</a></li>
+            <li><a href="login.html" class="logout-btn">Login</a></li>
         </ul>
     </div>
 
