--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </a>
                 <a href="https://www.leagueoflegends.com/en-ph/" class="badge">
                     <img src="assets/lol2.png" alt="leagueoflegends"/>
-                    League of Legends
+                    League of Legendssss
                 </a>
             </div>
             <h1>Hi, Vergel Santiago</h1>
