--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
 
     <section id="home" class="hero">
         <div class="hero-img">
-            <img src="assets/vergel.jpg" alt="Activity Photo"/>
+            <img src="vergel.jpg" alt="Activity Photo"/>
         </div>
         <div class="hero-text">
             <div class="badges">
                 <!-- Adding links to each badge -->
                 <a href="https://playvalorant.com/en-us/" class="badge">
-                    <img src="assets/valo1.png" alt="Valorant"/>
+                    <img src="valo1.png" alt="Valorant"/>
                     Valorant
                 </a>
                 <a href="https://www.minecraft.net/en-us" class="badge">
-                    <img src="assets/mc1.png" alt="Minecraft"/>
+                    <img src="mc1.png" alt="Minecraft"/>
                     Minecraft
                 </a>
                 <a href="https://www.leagueoflegends.com/en-ph/" class="badge">
-                    <img src="assets/lol2.png" alt="leagueoflegends"/>
+                    <img src="lol2.png" alt="leagueoflegends"/>
                     League of Legendssss
                 </a>
             </div>
@@ -54,17 +54,17 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-logo">
-                <img src="assets/tao.png" alt="Vergel Adrian Santiago" width="150" />
+                <img src="tao.png" alt="Vergel Adrian Santiago" width="150" />
             </div>
             <div class="footer-links">
                 <a href="https://www.tiktok.com/@miiisotofu" target="_blank" class="social-link">
-                    <img src="assets/tktk.png" alt="TikTok" />
+                    <img src="tktk.png" alt="TikTok" />
                 </a>
                 <a href="https://www.instagram.com/vewn_ioh/" target="_blank" class="social-link">
-                    <img src="assets/ig.png" alt="Instagram" />
+                    <img src="ig.png" alt="Instagram" />
                 </a>
                 <a href="https://www.facebook.com/vergel.santiago.3388/" target="_blank" class="social-link">
-                    <img src="assets/fb.png" alt="LinkedIn" />
+                    <img src="fb.png" alt="LinkedIn" />
                 </a>
             </div>
             <p class="footer-text">2025 Vergel Santiago. All rights</p>
