--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
 <body>
   <div class="card">
     <div class="header">
-      <img src="assets/vergel1.png" alt="Profile Photo" />
+      <img src="vergel1.png" alt="Profile Photo" />
       <div class="header-info">
         <h1>Vergel Adrian G. Santiago</h1>
         <p>✆ 09478848470</p>
