--- a/skills.html
+++ b/skills.html
@@ -26,27 +26,27 @@
     <h2>Skills</h2>
     <div class="skills-container">
       <div class="skill-card">
-        <img src="assets/usap1.png" alt="Communication" />
+        <img src="usap1.png" alt="Communication" />
         <h3>Communication</h3>
         <p>Written and verbal communication skills.</p>
       </div>
       <div class="skill-card">
-        <img src="assets/adapt.png" alt="Adaptability" />
+        <img src="adapt.png" alt="Adaptability" />
         <h3>Adaptability</h3>
         <p>Flexibility in a fast-paced environment.</p>
       </div>
       <div class="skill-card">
-        <img src="assets/tulongan1.png" alt="Teamwork" />
+        <img src="tulongan1.png" alt="Teamwork" />
         <h3>Teamwork</h3>
         <p>Ability to collaborate effectively.</p>
       </div>
       <div class="skill-card">
-        <img src="assets/details.png" alt="Attention to Detail" />
+        <img src="details.png" alt="Attention to Detail" />
         <h3>Attention to Detail</h3>
         <p>Meticulous work habits.</p>
       </div>
       <div class="skill-card">
-        <img src="assets/collab1.png" alt="Collaboration" />
+        <img src="collab1.png" alt="Collaboration" />
         <h3>Collaboration</h3>
         <p>Working effectively with others.</p>
       </div>
@@ -102,7 +102,7 @@
       <!-- Project 3 -->
       <div class="project-card">
         <div class="project-image">
-          <img src="assets/fw.jpg" alt="Project Image" />
+          <img src="fw.jpg" alt="Project Image" />
         </div>
         <div class="project-content">
           <h3>Fashion Wear System</h3>
@@ -123,17 +123,17 @@
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="assets/tao.png" alt="Vergel Adrian Santiago" width="120" />
+        <img src="tao.png" alt="Vergel Adrian Santiago" width="120" />
       </div>
       <div class="footer-links">
         <a href="https://www.tiktok.com/@miiisotofu" target="_blank" class="social-link">
-          <img src="assets/tktk.png" alt="TikTok" />
+          <img src="tktk.png" alt="TikTok" />
         </a>
         <a href="https://www.instagram.com/vewn_ioh/" target="_blank" class="social-link">
-          <img src="assets/ig.png" alt="Instagram" />
+          <img src="ig.png" alt="Instagram" />
         </a>
         <a href="https://www.facebook.com/vergel.santiago.3388/" target="_blank" class="social-link">
-          <img src="assets/fb.png" alt="Facebook" />
+          <img src="fb.png" alt="Facebook" />
         </a>
       </div>
       <p class="footer-text">© 2025 Vergel Santiago. All rights reserved.</p>
