--- a/skills.html
+++ b/skills.html
@@ -80,8 +80,8 @@
       <!-- Project 2 -->
       <div class="project-card">
         <div class="project-image video-container">
-          <iframe src="https://www.youtube.com/embed/PvmXAzBtYkA?start=258
-          " title="YouTube Video Player"
+          <iframe src="https://www.youtube.com/embed/PvmXAzBtYkA?start=258"
+            title="YouTube Video Player"
             frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="project-content">
