--- a/skills.html
+++ b/skills.html
@@ -8,13 +8,14 @@
   <link rel="stylesheet" href="skills.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="navbar">
     <div class="logo">
-      <img src="assets/nu2.png" alt="NU Logo" height="50" />
+      <img src="nu2.png" alt="NU Logo" height="50" />
     </div>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -26,7 +27,7 @@
     <h2>Skills</h2>
     <div class="skills-container">
       <div class="skill-card">
-        <img src="usap1.png" alt="Communication" />
+        <img src="assets/usap1.png" alt="Communication" />
         <h3>Communication</h3>
         <p>Written and verbal communication skills.</p>
       </div>
@@ -60,7 +61,7 @@
       <!-- Project 1 -->
       <div class="project-card">
         <div class="project-image">
-          <img src="assets/cm.png" alt="Mobile App Development" />
+          <img src="cm.png" alt="Mobile App Development" />
         </div>
         <div class="project-content">
           <h3>Course Management System</h3>
@@ -80,8 +81,8 @@
       <!-- Project 2 -->
       <div class="project-card">
         <div class="project-image video-container">
-          <iframe src="https://www.youtube.com/embed/PvmXAzBtYkA?start=258"
-            title="YouTube Video Player"
+          <iframe src="https://www.youtube.com/embed/PvmXAzBtYkA?start=258
+          " title="YouTube Video Player"
             frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="project-content">
