--- a/skills.html
+++ b/skills.html
@@ -27,7 +27,7 @@
     <h2>Skills</h2>
     <div class="skills-container">
       <div class="skill-card">
-        <img src="assets/usap1.png" alt="Communication" />
+        <img src="usap1.png" alt="Communication" />
         <h3>Communication</h3>
         <p>Written and verbal communication skills.</p>
       </div>
