--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <img src="assets/nu2.png" alt="NU Logo" width="100%" height="50" />
+            <img src="nu2.png" alt="NU Logo" width="100%" height="50" />
         </div>
         <ul>
             <li><a href="#home">Home</a></li>
